@@ -1,6 +1,6 @@
 #ifndef VERSION_HPP
 #define VERSION_HPP
-#define PRODUCTVER     0,4,0,111
-#define STRPRODUCTVER  "0,4,0,111"
-#define STRPRODUCTDATE "2011-11-14"
+#define PRODUCTVER     0,4,0,112
+#define STRPRODUCTVER  "0,4,0,112"
+#define STRPRODUCTDATE "2011-12-08"
 #endif // VERSION_HPP
