@@ -1,3 +1,3 @@
 version=0.4.0
-build=111
-date=2011-11-14
+build=112
+date=2011-12-08
